# auto

./: .gitignore  Cargo.toml  README.md  plot_loss.py
auto/: Cargo.toml
auto-core/src/: lib.rs
auto-matrix/: Cargo.toml
auto-matrix/src/: lib.rs
auto-scalar/: Cargo.toml
auto-scalar/src/: lib.rs
auto/src/: lib.rs
benches/: criterion_benchmarks.rs
crates/auto/: Cargo.toml
crates/core/: Cargo.toml
crates/matrix/: Cargo.toml
crates/scalar/: Cargo.toml
crates/scalar/src/: lib.rs
examples/: linear_regression.rs  simple.rs  xor_matrix.rs  xor_network.rs  xor_scalar.rs
src/: lib.rs
