[workspace]
resolver = "3"
members = [
  "crates/auto",
  "crates/core",
  "crates/matrix",
  "crates/scalar",
]

[profile.release]
lto = true
panic = "abort"
strip = "symbols"
opt-level = 3
codegen-units = 1

# RUSTFLAGS="-C force-frame-pointers=yes" cargo build --profile profiling
[profile.profiling]
inherits = "release"
debug = true
strip = "none"

[profile.bench]
debug = true
strip = "none"
