[package]
name = "auto"
version = "0.1.0"
edition = "2021"

[lib]
name = "lib_auto"
path = "src/lib.rs"

[features]
scalar = ["lib-auto-scalar"]
matrix = ["lib-auto-matrix"]
# `cargo add auto` only provides scalars, for small builds...
default = ["scalar"]

[dependencies]
lib-auto-core = { path = "../auto-core" }

# feature gated, optional layers
lib-auto-scalar = { path = "../auto-scalar", optional = true }
lib-auto-matrix = { path = "../auto-matrix", optional = true }

[[example]]
name = "simple"
path = "../examples/simple.rs"

[[example]]
name = "xor"
path = "../examples/xor_network.rs"
